--- a/src/app/components/chips/chips.component.scss
+++ b/src/app/components/chips/chips.component.scss
@@ -1,9 +1,14 @@
-:host ::ng-deep {
-  fs-chip {
-    margin-right: 10px;
+:host {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -8px;
+  ::ng-deep {
+    fs-chip {
+      margin-right: 8px;
 
-    &:last-child {
-      margin-right: 0;
+      &:last-child {
+        margin-right: 0;
+      }
     }
   }
 }
